Добавил блок price и внес правки в car

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               <ul>
                   <li class="menu_item"><a href="#main">Главная</a></li>
                   <li class="menu_item"><a href="#car">Автомобили</a></li>
-                  <li class="menu_item"><a href="#">Бронирование авто</a></li>
+                  <li class="menu_item"><a href="#price">Бронирование авто</a></li>
               </ul>
           </nav>
       </div>
@@ -54,8 +54,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -64,8 +64,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2019</div>
                       </div>
                   </div>
 
@@ -85,8 +85,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -95,8 +95,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2017</div>
                       </div>
                   </div>
 
@@ -116,8 +116,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -126,8 +126,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2018</div>
                       </div>
                   </div>
 
@@ -147,8 +147,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -157,8 +157,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2019</div>
                       </div>
                   </div>
 
@@ -178,8 +178,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -188,8 +188,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2018</div>
                       </div>
                   </div>
 
@@ -209,8 +209,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -219,8 +219,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2019</div>
                       </div>
                   </div>
 
@@ -240,8 +240,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -250,8 +250,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2018</div>
                       </div>
                   </div>
 
@@ -271,8 +271,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -281,8 +281,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2019</div>
                       </div>
                   </div>
 
@@ -302,8 +302,8 @@
                   <div class="car-item_info">
                       <div class="car-item_point">
                           <img src="img/transmission.png" alt="Transmission">
-                          <div>Привод</div>
-                          <div>полный</div>
+                          <div>Коробка</div>
+                          <div>автомат</div>
                       </div>
                       <div class="car-item_point">
                           <img src="img/wheel.png" alt="Wheel">
@@ -312,8 +312,8 @@
                       </div>
                       <div class="car-item_point">
                           <img src="img/year.png" alt="Year">
-                          <div>Кол-во мест</div>
-                          <div>2</div>
+                          <div>Год выпуска </div>
+                          <div>2019</div>
                       </div>
                   </div>
 
@@ -329,8 +329,33 @@
       </div>
   </div>
 
-  <footer class="footer">
+  <div class="price" id="price">
+      <div class="container">
+          <h2 class="sub-title">
+              Узнать цену и забронировать
+          </h2>
+          <div class="price_text">
+              Заполните данные, и мы перезвоним вам для уточнения всех деталей бронирования
+          </div>
+          <form action="" class="price_form">
+              <input type="text" class="price_input" placeholder="Ваше имя">
+              <input type="text" class="price_input" placeholder="Ваше телефон">
+              <input type="text" class="price_input" placeholder="Автомобиль, который вас интересует">
+              <button class="button">Указать цену</button>
+          </form>
+          <img class="price_img" src="img/rolls.png" alt="Rolls">
+      </div>
+  </div>
 
+  <footer class="footer">
+      <div class="container">
+          <div class="logo">
+              <img src="img/logo.png" alt="Logo">
+          </div>
+          <div class="rights">
+              Все права  защищены
+          </div>
+      </div>
   </footer>
 </body>
 </html>
